--- a/quemsomos.html
+++ b/quemsomos.html
@@ -54,7 +54,44 @@
     </header>  
 
     <main class="conteudo">
-        
+        <section class="conteudo-quem">
+        <div class="quem-escrito">
+        <h1 class="titulo-objetivo">Nosso objetivo:</h1>
+        <p>Ser um complexo de esportes, com estrutura completa para trazer entretenimento <br> e lazer para Vitória da Conquista.</p>
+        <h2 class="titulo-ideia">Como surgiu a ideia?</h2>
+        <p>Os quatro sócios da arena viram no Beach Tennis uma grande oportunidade de negócio. <br>
+            Primeiro por que o esporte é o que mais cresce no Brasil, e apesar de não ser criado aqui<br>
+            o Brasil já é capital mundial do esporte!
+            Depois, Conquista ainda não possuia um complexo<br> 
+            de Arena com toda a estrutura que oferecemos! De professores a Etapas do campeonato<br>
+            Baiano sendo realizadas em nossa Arena. 
+        </p>
+        </div>
+        <div class="card">
+            <div class="topocard">
+                <h3>Os resposáveis</h3>
+                <span class="textocard">Os responsáveis pela criação da Arena Beach Sunset</span>
+            </div>
+            <div class="cardbg"></div>
+            <div class="baixocard">
+                <p class="textobottom">Da esquerda para direita Neto, Igor, João e Bruno</p>
+                <div class="botoescard">
+                    <a href="https://www.instagram.com/netoovegas/">
+                    <img src="./images/insta.png" alt="" class="instacard">
+                    </a>
+                    <a href="https://www.instagram.com/igordouradoadv/">
+                    <img src="./images/insta.png" alt="" class="instacard">
+                    </a>
+                    <a href="https://www.instagram.com/joaomandrades/">
+                    <img src="./images/insta.png" alt="" class="instacard">
+                    </a>
+                    <a href="https://www.instagram.com/brunofgalvao/">
+                    <img src="./images/insta.png" alt="" class="instacard">
+                    </a>
+                </div>
+            </div>
+        </div>            
+        </section>
     </main>
 
     <footer class="rodape">
